# humanlike_moving_robot

./: CMakeLists.txt  DOCKER.md  IK_solver.cpp  IK_solver.hpp  IK_solver.lib  Optimizer.cpp  Prova.cpp  README.md  franka_ik_He.hpp  package.xml
config/: controllers.yaml  mode.yaml
data/3D_models/: pick_and_place.bash
data/3D_models/base/: model.urdf
data/dataset/: follow_profile.csv  inspect_with_camera.csv  main.csv  pick_and_place.csv  pick_and_place_1.csv  pick_and_place_2.csv  pick_and_place_3.csv  pick_and_place_4.csv  pick_and_place_4_bricks.csv  pick_and_place_on_box.csv  pnp_4bricks.csv  pnp_4bricks_flip.csv  pnp_4bricks_rev.csv  pnp_4bricks_rot.csv  pnp_4bricks_stack.csv  screw.csv  stack_bricks.csv
data/model_92/: hyperparams.json
data/models/: hyperparams.json
data/models/brick/: model.urdf
data/models/frame/: model.sdf
data/models_92/: NN_model.pth
data/models_working/: NN_model.pth
data/tracking_data/: data.json  dir_bottom_or_front_dx_lin.csv  dir_bottom_or_left_dx_lin.csv  dir_bottom_or_right_sx_lin.csv  dir_bottom_or_rnd_dx_circ.csv  dir_bottom_or_rnd_sx_circ.csv  dir_front_or_bottom_dx_lin.csv  dir_front_or_left_sx_lin.csv  dir_front_or_right_dx_lin.csv  dir_front_or_rnd_sx_circ.csv  dir_front_or_top_dx_lin.csv  dir_left_or_bottom_dx_lin.csv  dir_left_or_front_dx_lin.csv  dir_left_or_rnd_dx_circ.csv  dir_left_or_top_dx_lin.csv  dir_right_or_bottom_sx_lin.csv  dir_right_or_front_sx_lin.csv  dir_right_or_rnd_sx_circ.csv  dir_right_or_top_sx_lin.csv  dir_rnd_or_rnd_dx_rnd.csv  dir_rnd_or_rnd_sx_rnd.csv  dir_top_or_front_dx_lin.csv  dir_top_or_left_dx_lin.csv  dir_top_or_right_sx_lin.csv  dir_top_or_rnd_dx_circ.csv  dir_top_or_rnd_sx_circ.csv  test_follow_profile.csv  test_inspect_with_camera.csv  test_pick_and_place.csv  test_pick_and_place_1.csv  test_pick_and_place_2.csv  test_pick_and_place_3.csv  test_pick_and_place_4.csv  test_pick_and_place_4_bricks.csv  test_pick_and_place_on_box.csv  test_pnp_4bricks.csv  test_pnp_4bricks_flip.csv  test_pnp_4bricks_rev.csv  test_pnp_4bricks_rot.csv  test_pnp_4bricks_stack.csv  (+2 more)
data/trajectory/follow_profile/: arm.json  gripper.json
data/trajectory/inpile_bricks/: arm.json  gripper.json
data/trajectory/inspect_with_camera/: arm.json  gripper.json
data/trajectory/pick_and_place/: arm.json  gripper.json
data/trajectory/pick_and_place_1/: arm.json  gripper.json
data/trajectory/pick_and_place_2/: arm.json  gripper.json
data/trajectory/pick_and_place_3/: arm.json  gripper.json
data/trajectory/pick_and_place_4/: arm.json  gripper.json
data/trajectory/pick_and_place_4_bricks/: arm.json  gripper.json
data/trajectory/pick_and_place_on_box/: arm.json  gripper.json
data/trajectory/pnp_4bricks/: arm.json  gripper.json
data/trajectory/pnp_4bricks_flip/: arm.json  gripper.json
data/trajectory/pnp_4bricks_rev/: arm.json  gripper.json
data/trajectory/pnp_4bricks_rot/: arm.json  gripper.json
data/trajectory/pnp_4bricks_stack/: arm.json  gripper.json
data/trajectory/screw/: arm.json  gripper.json
data/trajectory/stack_bricks/: arm.json  gripper.json
include/: cast_tools.hpp  kinematics.hpp  progressbar.hpp  utils.hpp
launch/: compute_robot_workspace.launch  franka_robot_control.launch  gazebo_panda_control.launch  main.launch  prova.launch  rviz_panda_control.launch
scripts/: GUI.py  NN_engine.py  NN_trainer.py  Panda_trajectory_planner.py  cl_main.py  controller.py  gen_json.py  gravity_comp.py  human_poses.py  human_poses_test.py  launch_UI.py  launch_sim.py  main.py  old_main.py  origin_main.py  pose_plotter.py  test.py
scripts/static/: script.js  script1.js  script2.js  style.css
scripts/templates/: home.html  page1.html  page2.html
src/: IK_ROSserver.cpp  IK_server.cpp  computeWorkspace.cpp  dataset_creator.cpp  test_creator.cpp
srv/: IK.srv  IK_fromFrame.srv  IK_fromQuater.srv
