<?xml version="1.0"?>
<package format="2">
  <name>path_planning</name>
  <version>0.0.0</version>
  <description>The path_planning package</description>


  <maintainer email="panda@todo.todo">panda</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>

  <exec_depend>message_runtime</exec_depend> 
  <exec_depend>xacro</exec_depend>
  <exec_depend>roslib</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>franka_gazebo</depend> 
  <!-- <depend>scipy</depend> -->

</package>
