<?xml version="1.0"?>
<package format="2">
  <name>humanlike_moving_robot</name>
  <version>1.0.0</version>
  <description>The humanlike_moving_robot package</description>


  <maintainer email="panda@todo.todo">panda</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslib</build_depend>

  <exec_depend>message_runtime</exec_depend> 
  <exec_depend>xacro</exec_depend>
  <exec_depend>roslib</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>franka_gazebo</depend> 
  <depend>scipy</depend>
  <depend>torch</depend>

</package>
